--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,6 +19,31 @@ Fonts
 Reset Css
 ===================================================================================== */
 
+/* ====================== */
+.btn_payment_cancel {
+    font-size: 14px;
+    font-weight: 400;
+    font-family: 'Roboto', sans-serif;
+    color: #fff !important;
+    background: #475692;
+    text-align: center;
+    border: 0;
+    width: 100%;
+    height: 40px;
+    float: right;
+    right: 0;
+    padding: 10px 0;
+}
+
+.btn_payment_cancel:hover {
+    color: #fff !important;
+    background: #333;
+}
+
+
+/* ===================== */
+
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -485,6 +510,18 @@ i.icon1 {
     margin-left: 10px;
 }
 
+.review_course {
+    margin-top: 10px;
+    border: 1px solid #475692;
+    padding: 10px;
+    cursor: pointer;
+    border-radius: 2px;
+}
+
+.review_course:hover {
+    background: #efeeff;
+}
+
 .upload_btn {
     font-size: 14px;
     font-weight: 500;
@@ -494,6 +531,13 @@ i.icon1 {
     padding: 9px 15px;
     border-radius: 3px;
 	margin-right: 10px;
+}
+
+.teach_on_btn:hover {
+    color: #fff !important;
+    background: #333;
+    border: 1px solid white;
+    border-radius: 3px;
 }
 
 .upload_btn i {
@@ -959,7 +1003,7 @@ i.icon1 {
 }
 
 .shrt-cart-btn:hover  {
-	color: #475692;
+	color: #333;
 }
 
 .fcrse_1:hover  {
@@ -1798,8 +1842,8 @@ i.icon1 {
 
 .stud_img img {
     text-align: left;
-    width: 50px !important;
-    height: 50px !important;
+    width: 50px ;
+    height: 50px ;
     display: inline-block !important;
     border-radius: 100%;
     border: 2px solid #fff;
