--- a/public/css/night-mode.css
+++ b/public/css/night-mode.css
@@ -14,6 +14,40 @@ Night Mood
     border-radius: 2px;
 }
 
+.night-mode #editor {
+    border: 1px solid rgba(34, 36, 38, .15);
+    padding: 10px;
+    background: #333;
+    color: white;
+    min-height: 200px;
+    border-radius: 3px;
+    white-space: pre-wrap;
+}
+
+.night-mode #editor:focus {
+    border: 1px solid #333;
+    /* Change border color on focus */
+    background: #fff;
+    color: #333;
+    outline: none;
+    /* Remove the default outline */
+}
+
+.night-mode #toolbar button {
+    background-color: transparent;
+    color: #ccc;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    transition: color 0.3s;
+}
+
+ 
 .night-mode .review_course:hover {
     color: white;
     background-color: #333;
