--- a/public/css/instructor-dashboard.css
+++ b/public/css/instructor-dashboard.css
@@ -328,6 +328,10 @@ input[type=text] {
     margin-left: 240px;
   }
 
+  .profile_form{
+    margin-right:
+  }
+
   .wrapper__minify {
     margin-left: 60px;
   }
