--- a/public/css/instructor-dashboard.css
+++ b/public/css/instructor-dashboard.css
@@ -677,7 +677,7 @@ i.icon1 {
     text-align: center;
     float: left;
     padding: 15px 0;
-    background: #ffecec;
+    background: #efeeff;
     font-size: 14px;
     color: #333 !important;
     font-family: 'Roboto', sans-serif;
@@ -1385,7 +1385,7 @@ i.icon1 {
 
 .dropdown-content span:hover {
 	color: #333 !important;
-	background-color: #ffecec;
+	background-color: #efeeff;
 }
 
 .more_dropdown:hover .dropdown-content {display: block;}
@@ -1766,7 +1766,7 @@ table.table.ucp-table {
 .ucp-table thead tr th {
     color: #333;
 	font-size: 14px;
-    background-color: #ffecec;
+    background-color: #efeeff;
 }
 
 .ucp-table tfoot {
@@ -2936,7 +2936,7 @@ i.icon8 {
 
 .chat__message__dt.active, .chat__message__dt:hover {
     border-left: 4px solid #475692;
-	background: #ffecec;
+	background: #efeeff;
 }
 
 .user-status {
@@ -3226,7 +3226,7 @@ i.icon8 {
 }
 
 .message-dt.st3 .message-inner-dt > p {
-	background-color: #ffecec;
+	background-color: #efeeff;
 	color: #686f7a;
 	width: auto;
 	padding: 12px 20px;
@@ -4113,7 +4113,7 @@ i.icon8 {
     font-size: 120%;
 	height: 30px;
 	Width: 30px;
-	background: #ffecec;
+	background: #efeeff;
 	border-radius: 100%;
 	margin-right: 10px;
 	padding: 6px 4px 0;
@@ -4235,6 +4235,10 @@ i.icon8 {
 }
 
 #edit-section {
+    padding: 0 20px;
+}
+
+#delete-section {
     padding: 0 20px;
 }
 
