--- a/public/css/instructor-dashboard.css
+++ b/public/css/instructor-dashboard.css
@@ -1304,11 +1304,15 @@ i.icon1 {
 
 .prce142 {
     float: right;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 500;
     font-family: 'Roboto', sans-serif;
     color: #333;
     text-align: right;
+}
+
+.prce142 span {
+    font-size: 12px;
 }
 
 .vdtodt {
@@ -3968,6 +3972,14 @@ i.icon8 {
 
 .yu {
     background: #ff0000;
+}
+
+.tg {
+    background: #178EC9;
+}
+
+.ig{
+    background: linear-gradient(45deg,rgb(255, 242, 0),red,rgb(247, 27, 200));
 }
 
 .st_download_btn {
