--- a/public/css/student_dashboard.css
+++ b/public/css/student_dashboard.css
@@ -1305,11 +1305,15 @@ i.icon1 {
 
 .prce142 {
     float: right;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 500;
     font-family: 'Roboto', sans-serif;
     color: #333;
     text-align: right;
+}
+
+.prce142 span {
+    font-size: 12px;
 }
 
 .vdtodt {
