--- a/public/css/instructor-dashboard.css
+++ b/public/css/instructor-dashboard.css
@@ -280,6 +280,48 @@ body {
 	background: #f7f7f7 !important;
 }
 
+.vd_mdl .close {
+    position: absolute;
+    right: 10px;
+    top: 8px;
+    color: #fff;
+    margin-left: auto;
+    z-index: 1;
+}
+
+.vd_mdl .close:hover {
+    color: #fff;
+}
+
+.vd_mdl .modal-body {
+    padding: 0 !important;
+}
+
+.vd_mdl .modal-content {
+    border-radius: 0 !important;
+}
+
+.vd_mdl .modal-body iframe {
+    width: 100%;
+    height: 375px;
+    margin-bottom: -5px;
+}
+
+.membership_chk_bg {
+    background: #fff;
+    width: 100%;
+    float: left;
+    padding: 30px;
+    border-radius: 3px;
+    border: 1px solid #efefef;
+    transition: all .2s ease-in-out;
+    margin-bottom: 30px;
+}
+.rght1528 {
+    position: sticky;
+    top: 90px;
+}
+
 .menu_left::-webkit-scrollbar {
     width:4px;
 }
