--- a/public/css/mystyle.css
+++ b/public/css/mystyle.css
@@ -100,41 +100,160 @@
 }
 
 .noti-icon-default {
-    background: #F00;
-    border-radius: 100%;
-    color:white;
-    padding: 2px;
-    display: block;
-    margin-top: -15px;
-    margin-left: 30px;
+    border-radius: 50%;
+    border: 2px solid #fff;
+    height: 22px;
+    width: 22px;
+    background: #f00;
+    position: absolute;
+    right: 10px;
+    bottom: 2px;
+    color: #fff;
+    font-size: 10px;
+    font-weight: 600;
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
 }
 
 .noti-icon-msg {
+    border-radius: 50%;
+    border: 2px solid #fff;
+    height: 22px;
+    width: 22px;
     background: #27ac03;
-    border-radius: 100%;
-    color: white;
-    padding: 2px;
-    display: block;
-    margin-top: -15px;
-    margin-left: 30px;
+    position: absolute;
+    right: 10px;
+    bottom: 2px;
+    color: #fff;
+    font-size: 10px;
+    font-weight: 600;
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
 }
 
 .noti-icon-course {
+    border-radius: 50%;
+    border: 2px solid #fff;
+    height: 22px;
+    width: 22px;
     background: #475692;
-    border-radius: 100%;
-    color: white;
-    padding: 2px;
-    display: block;
-    margin-top: -15px;
-    margin-left: 30px;
+    position: absolute;
+    right: 10px;
+    bottom: 2px;
+    color: #fff;
+    font-size: 10px;
+    font-weight: 600;
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+
 }
 
 .noti-icon-review {
+    border-radius: 50%;
+    border: 2px solid #fff;
+    height: 22px;
+    width: 22px;
     background: #e5ff00;
-    border-radius: 100%;
-    color: white;
-    padding: 2px;
+    position: absolute;
+    right: 10px;
+    bottom: 2px;
+    color: #fff;
+    font-size: 10px;
+    font-weight: 600;
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+}
+
+.chat__message__dt {
+    padding: 20px 20px 20px 18px;
+    border-left: 4px solid transparent;
     display: block;
-    margin-top: -15px;
-    margin-left: 30px;
+    cursor: pointer;
+    float: left;
+    width: 100%;
+    transition: padding .4s ease-in-out;
+}
+
+.chat__message__dt.active,
+.chat__message__dt:hover {
+    border-left: 4px solid #475692;
+    background: #efeeff;
+}
+
+.user-status {
+    min-height: 44px;
+    padding: 0;
+    position: relative;
+    float: left;
+    width: 100%;
+}
+
+.user-avatar {
+    margin-top: 0px;
+    float: left;
+    position: relative;
+}
+
+.user-avatar img {
+    width: 50px;
+    height:50px;
+    border-radius: 50%;
+    border: 2px solid #fff;
+    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.1);
+    margin-right: 20px;
+}
+
+.msg__badge {
+    border-radius: 50%;
+    border: 2px solid #fff;
+    height: 22px;
+    width: 22px;
+    background: #475692;
+    position: absolute;
+    right: 10px;
+    bottom: 2px;
+    color: #fff;
+    font-size: 10px;
+    font-weight: 600;
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+}
+
+.user-status-title {
+    color: #333;
+    font-size: 16px;
+    font-weight: 500;
+    font-family: 'Roboto', sans-serif;
+    line-height: 1.4285714286em;
+    text-align: left;
+    padding-left: 65px;
+    display: block;
+    margin-bottom: 6px;
+}
+
+.user-status .user-status-text {
+    color: #686f7a;
+    font-size: 14px;
+    font-weight: 400;
+    font-family: 'Roboto', sans-serif;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    margin-right: 10px;
+    margin-bottom: 0;
+}
+
+.user-status .user-status-time.floaty {
+    margin-top: 0;
+    position: absolute;
+    top: 2px;
+    right: 0;
+}
+
+.user-status .user-status-time {
+    font-size: 12px;
+    font-weight: 400;
+    font-family: 'Roboto', sans-serif;
+    margin-bottom: 0;
+    color: #afafaf;
 }
