--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4257,7 +4257,7 @@ a.rmv-btn i {
 }
 
 .ui.label.lb12 {
-    background-color: #dedfe !important;
+    background-color: '#dedfe' !important;
     padding: .9999em 1.2em !important;
     color: #686f7a !important;
     border-top-left-radius: 3px !important;
@@ -5071,7 +5071,6 @@ a.rmv-btn i {
     color: #686f7a;
     line-height: 26px;
     padding-top: 27px;
-}
 }
 
 .story125 {
@@ -6120,7 +6119,7 @@ a.rmv-btn i {
 	background: #34a853 !important;
 }
 
-./* --- Forgot Password Page --- */
+/* --- Forgot Password Page --- */
 
 .main-tabs {
     width: 100%;
@@ -8319,3 +8318,439 @@ a.nav-icon-list:hover {
 .lecture-content-txt p {
     line-height: 26px;
 }
+/* --- Messages Page --- */
+
+.all_msg_bg {
+    background: #fff;
+    margin-top: 30px;
+    width: 100%;
+    border-radius: 3px;
+    border: 1px solid #efefef;
+    padding: 0;
+    float: left;
+    width: 100%;
+}
+
+.ui[class*="left icon"].swdh15.input>input {
+    padding-left: 4.2em !important;
+    padding-right: 1em !important;
+    height: 40px !important;
+    font-size: 14px;
+    font-weight: 400;
+    font-family: 'Roboto', sans-serif;
+}
+
+i.icon8 {
+    font-size: 20px !important;
+}
+
+.msg_search {
+    width: 100%;
+    float: left;
+    padding: 20px;
+    border-bottom: 1px solid #efefef;
+}
+
+.chat__message__dt {
+    padding: 20px 20px 20px 18px;
+    border-left: 4px solid transparent;
+    display: block;
+    cursor: pointer;
+    float: left;
+    width: 100%;
+    transition: padding .4s ease-in-out;
+}
+
+.chat__message__dt.active,
+.chat__message__dt:hover {
+    border-left: 4px solid #475692;
+    background: #efeeff;
+}
+
+.user-status {
+    min-height: 44px;
+    padding: 0;
+    position: relative;
+    float: left;
+    width: 100%;
+}
+
+.user-avatar {
+    margin-top: 0px;
+    float: left;
+    position: relative;
+}
+
+.user-avatar img {
+    width: 50px;
+    border-radius: 50%;
+    border: 2px solid #fff;
+    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.1);
+    margin-right: 20px;
+}
+
+.msg__badge {
+    border-radius: 50%;
+    border: 2px solid #fff;
+    height: 22px;
+    width: 22px;
+    background: #475692;
+    position: absolute;
+    right: 10px;
+    bottom: 2px;
+    color: #fff;
+    font-size: 10px;
+    font-weight: 600;
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+}
+
+.user-status-title {
+    color: #333;
+    font-size: 16px;
+    font-weight: 500;
+    font-family: 'Roboto', sans-serif;
+    line-height: 1.4285714286em;
+    text-align: left;
+    padding-left: 65px;
+    display: block;
+    margin-bottom: 6px;
+}
+
+.user-status .user-status-text {
+    color: #686f7a;
+    font-size: 14px;
+    font-weight: 400;
+    font-family: 'Roboto', sans-serif;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    margin-right: 10px;
+    margin-bottom: 0;
+}
+
+.user-status .user-status-time.floaty {
+    margin-top: 0;
+    position: absolute;
+    top: 2px;
+    right: 0;
+}
+
+.user-status .user-status-time {
+    font-size: 12px;
+    font-weight: 400;
+    font-family: 'Roboto', sans-serif;
+    margin-bottom: 0;
+    color: #afafaf;
+}
+
+.simplebar-content-wrapper {
+    float: left;
+    width: 100%;
+    overflow: hidden;
+    height: 450px;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+    display: block;
+}
+
+.simplebar-content-wrapper:hover {
+    overflow-y: scroll;
+}
+
+.chatbox_right {
+    float: left;
+    width: 100%;
+    border-left: 1px solid #efefef;
+    height: 100%;
+}
+
+.chat_header {
+    width: 100%;
+    float: left;
+    padding: 15px 20px;
+    border-bottom: 1px solid #efefef;
+}
+
+.user-status .user-status-tag {
+    display: inline-block;
+    height: 20px;
+    font-weight: 500;
+    font-family: 'Roboto', sans-serif;
+    padding: 0 8px;
+    border-radius: 3px;
+    background-color: #afafaf;
+    color: #fff;
+    font-size: .75rem;
+    font-weight: 700;
+    line-height: 20px;
+    text-transform: uppercase;
+    position: relative;
+    margin-bottom: 0;
+}
+
+.user-status .user-status-tag.online {
+    background-color: #40d04f;
+}
+
+.simplebar-content-wrapper2 {
+    float: left;
+    width: 100%;
+    overflow: hidden;
+    height: 369px;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+    display: block;
+}
+
+.simplebar-content-wrapper2:hover {
+    overflow-y: scroll;
+}
+
+.chat_footer {
+    padding: 20px;
+    border-top: 1px solid #efefef;
+}
+
+/* === main-message-box === */
+
+.mCustomScrollbar {
+    padding-top: 20px;
+}
+
+.main-conversation-box {
+    float: left;
+    width: 100%;
+    background-color: #fff;
+    position: relative;
+    border-right: 1px solid #e5e5e5;
+    border-bottom: 1px solid #e5e5e5;
+    border-top: 1px solid #e5e5e5;
+}
+
+.message-bar-head {
+    float: left;
+    width: 100%;
+    background-color: #fff;
+    padding: 20px;
+    border-bottom: 1px solid #eaeaea;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 11;
+}
+
+.message-bar-head .usr-msg-details {
+    float: left;
+    width: auto;
+}
+
+.message-bar-head>a {
+    float: right;
+    color: #847577;
+    font-size: 14px;
+    padding-top: 12px;
+}
+
+.message-bar-head>a:hover {
+    color: #242424 !important;
+}
+
+.main-message-box {
+    float: left;
+    width: 100%;
+    position: relative;
+    margin-bottom: 15.5px;
+}
+
+.messg-usr-img {
+    position: absolute;
+    bottom: 25px;
+    left: 20px;
+    width: 50px;
+}
+
+.messg-usr-img img {
+    width: 100%;
+    -webkit-border-radius: 100px;
+    -moz-border-radius: 100px;
+    -ms-border-radius: 100px;
+    -o-border-radius: 100px;
+    border-radius: 100px;
+}
+
+.message-dt {
+    float: left;
+    width: auto;
+    padding-left: 20px;
+}
+
+.main-message-box.ta-right {
+    float: right;
+}
+
+.main-message-box.ta-right .messg-usr-img {
+    left: auto;
+    right: 0px;
+    bottom: 25px;
+}
+
+.main-message-box.ta-right .message-dt {
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.message-inner-dt {
+    float: left;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+    border-radius: 15px;
+}
+
+.img-bx {
+    background-color: #efefef;
+    padding: 20px;
+}
+
+.message-inner-dt>img {
+    display: inline-block;
+    width: auto;
+    margin-right: 5px;
+}
+
+.message-dt>span {
+    color: #afafaf;
+    font-size: 12px;
+    float: left;
+    width: 100%;
+    margin-top: 7px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+
+}
+
+.message-inner-dt>p {
+    float: right;
+    width: 100%;
+    background-color: #475692;
+    font-size: 14px;
+    font-family: 'Roboto', sans-serif;
+    line-height: 22px;
+    padding: 12px 20px;
+    color: #fff;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    -o-border-radius: 3px;
+    border-radius: 3px;
+    margin-bottom: 0;
+}
+
+.message-dt.st3 .message-inner-dt>p {
+    background-color: #efeeff;
+    color: #686f7a;
+    width: auto;
+    padding: 12px 20px;
+    float: left;
+    margin-bottom: 0;
+}
+
+.message-dt.st3 .message-inner-dt>p img {
+    float: right;
+    position: relative;
+    top: 3px;
+    padding-left: 5px;
+}
+
+.main-message-box.st3 .messg-usr-img {
+    bottom: 13px;
+}
+
+.message-send-area {
+    float: left;
+    width: 100%;
+    background-color: #fff;
+    padding: 20px;
+    border-top: 1px solid #efefef;
+    border-bottom-right-radius: 15px;
+}
+
+.mf-field {
+    float: left;
+    width: 100%;
+}
+
+.input__msg {
+    width: 89%;
+    float: left;
+}
+
+.mf-field .add_msg {
+    margin-left: 10px;
+    padding: 0 20px;
+    border-radius: 3px;
+    border: 0;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    font-size: 18px;
+    color: #fff;
+    background: #475692;
+    height: 40px;
+    float: left;
+}
+
+.mf-field .add_msg:hover {
+    color: #fff;
+    background: #333;
+}
+
+.add_photo {
+    margin-right: 10px;
+    border-radius: 20px;
+    border: 0;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    width: 50px;
+    font-size: 18px;
+    color: #fff;
+    background: #475692;
+}
+
+.add_photo:hover {
+    color: #fff;
+    background: #333;
+}
+
+.all__noti5 {
+    padding: 20px !important;
+}
+
+.crse_bl {
+    font-weight: 600;
+    font-family: 'Roboto', sans-serif;
+    color: #686f7a;
+}
+
+.noti__text5 {
+    font-size: 14px !important;
+}
+
+.setting_noti {
+    margin-top: 40px;
+    float: left;
+    padding: 10px 20px;
+    color: #fff;
+    background: #475692;
+    border-radius: 3px;
+    font-size: 14px;
+    font-weight: 500;
+    font-family: 'Roboto', sans-serif;
+}
+
+.setting_noti:hover {
+    color: #fff !important;
+    background: #333;
+}
+
