--- a/public/css/mystyle.css
+++ b/public/css/mystyle.css
@@ -262,3 +262,32 @@
     color: #999;
     font-family: 'Roboto', sans-serif;
 }
+
+.send-image{
+    padding:10px;
+    background-color: #f2f2f2;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.night-mode .send-image {
+    background-color: #4b4b4b;
+}
+
+.night-mode .send-image:hover {
+    color: #efeeff;
+    background-color: #636363;
+}
+
+.send-image:hover{
+    color:#475692;
+    background-color: #efeeff;
+}
+
+.message-image{
+    width: 230px !important;
+    border-radius: 5px;
+    float: right;
+    margin-top: 10px;
+    display: block;
+}
